...
          .from('warga')
          .select('role, status_penerimaan')
          .eq('email', email)
          .single();

      String status = response['status_penerimaan'];  
      if (session != null && status == 'Diterima') {
        final preferences = await SharedPreferences.getInstance();
        await preferences.setString('role', response['role']);
        String role = response['role'];

        if (!mounted) return;

        switch (role) {
          case "Admin": context.go('/admin/penduduk', extra: {'role': role}); break;
          case "RW": context.go('/rw/penduduk', extra: {'role': role}); break;
          case "RT": context.go('/rt/penduduk', extra: {'role': role}); break;
          case "Sekretaris": context.go('/sekretaris/kegiatan', extra: {'role': role}); break;
          case "Bendahara": context.go('/bendahara/keuangan', extra: {'role': role}); break;
          case "Warga": context.go('/warga/dashboard', extra: {'role': role}); break;
          default: ScaffoldMessenger.of(context).showSnackBar(const SnackBar(content: Text('Role tidak dikenal')));
        }
      } else {
        ScaffoldMessenger.of(context).showSnackBar(const SnackBar(content: Text('Error cannot login')));
      }
    } catch (e) {
...
                          physics: const NeverScrollableScrollPhysics(),
                          child: Opacity(
                            opacity: _showLoginForm ? 0 : 1,
                            child: Column(
                              children: [
                                LoginButton(
                                  key: const Key('btn_show_login_form'),
                                  text: "Login",
                                  onTap: _toggleLoginForm,
                                  withColor: true,
                                ),
                                const SizedBox(height: 16),
                                Row(
...
                                  ),
                                ),
                                const SizedBox(height: 24),

                                // Inputs
                                TextInputLogin(
                                  key: const Key('input_email'),
                                  hint: 'Email',
                                  controller: _controllerEmail,
                                  keyboardType: TextInputType.emailAddress,
                                ),
                                const SizedBox(height: 16),

                                TextInputLogin(
                                  key: const Key('input_password'),
                                  hint: 'Password',
                                  isPassword: true,
                                  controller: _controllerPassword,
                                ),
                                const SizedBox(height: 24),

                                // Submit Button
                                LoginButton(
                                  key: const Key('btn_submit_login'),
                                  text: "Login",
                                  onTap: () => signIn(),
                                  withColor: true,
                                ),
                                
                                const SizedBox(height: 20),
...
        final double fontSize = _showLoginForm ? 28 : 36;
        return Row(
          mainAxisAlignment: _showLoginForm ? MainAxisAlignment.start : MainAxisAlignment.center,
          mainAxisSize: MainAxisSize.min,
          children: [
            Text(
              "Sapa",
              style: GoogleFonts.poppins(
                fontSize: fontSize,
                fontWeight: FontWeight.bold,
                color: primaryColor,
              ),
            ),
...
